Edge selection obscured by overlay wireframe when using mirror modifier #65406

Closed
opened 2019-06-01 22:23:16 +02:00 by Sam · 9 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-05-31 22:45, hash: cc600de669
Worked: (optional)

Short description of error
If an object has mirror modifier enabled and wireframe is enabled in overlays, in edit mode edge selection highlight looks to be drawn under the black wireframe.

Exact steps for others to reproduce the error

  1. Open attached file
  2. Select edges and notice that the selection highlight color is almost invisible
    edit mode wireframe obscured when using mirror modifier.blend
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-05-31 22:45, hash: `cc600de669` Worked: (optional) **Short description of error** If an object has mirror modifier enabled and wireframe is enabled in overlays, in edit mode edge selection highlight looks to be drawn **under** the black wireframe. **Exact steps for others to reproduce the error** 1. Open attached file 2. Select edges and notice that the selection highlight color is almost invisible [edit mode wireframe obscured when using mirror modifier.blend](https://archive.blender.org/developer/F7082959/edit_mode_wireframe_obscured_when_using_mirror_modifier.blend)
Author

Added subscriber: @Sam200

Added subscriber: @Sam200

Added subscriber: @matc

Added subscriber: @matc

The same is happening with other modifiers. Essentially every modifier that preserves the original edges has this problem. Using "Adjust edit cage to modifier result" on the modifier fixes the problem with the side effect of being able to select generated edges.

My guess is that the wireframe for the resulting mesh would have to be drawn before the wireframe of the original mesh.

Without wireframe:
wireframe_off.png
With wireframe:
wireframe_on.png

The same is happening with other modifiers. Essentially every modifier that preserves the original edges has this problem. Using "Adjust edit cage to modifier result" on the modifier fixes the problem with the side effect of being able to select generated edges. My guess is that the wireframe for the resulting mesh would have to be drawn before the wireframe of the original mesh. Without wireframe: ![wireframe_off.png](https://archive.blender.org/developer/F7084161/wireframe_off.png) With wireframe: ![wireframe_on.png](https://archive.blender.org/developer/F7084167/wireframe_on.png)

Added subscriber: @v01tech

Added subscriber: @v01tech

Also I figured out, that when I set viewport settings to max quality, chosen wireframe colors dissapear completly
temp.jpg

My pc specs:
System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-06 23:23, hash: aa003c7324

Also I figured out, that when I set viewport settings to max quality, chosen wireframe colors dissapear completly ![temp.jpg](https://archive.blender.org/developer/F7091406/temp.jpg) My pc specs: **System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-06 23:23, hash: `aa003c7324`
Clément Foucault was assigned by matc 2019-06-10 21:36:33 +02:00

This issue was referenced by c84c59c81b

This issue was referenced by c84c59c81bc90a915b7e74aa90a0bc1fe8aadd22

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @bastianls-1

Added subscriber: @bastianls-1

I am still getting this issue!
Only when modifier is active. Happens with multiple edges selected too.

wireframeObscuresSelection.mp4

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 ATI Technologies Inc. 4.5.13571 Core Profile Context 19.9.3 26.20.13025.1004

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7

I am still getting this issue! Only when modifier is active. Happens with multiple edges selected too. [wireframeObscuresSelection.mp4](https://archive.blender.org/developer/F8397483/wireframeObscuresSelection.mp4) **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: AMD Radeon RX 5700 ATI Technologies Inc. 4.5.13571 Core Profile Context 19.9.3 26.20.13025.1004 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7`
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65406
No description provided.