Fix T65406 Edit Mode: Edge selection is below wireframe overlay

This was due to a double offset of the wireframe. We also reduce
the wireframe offset. The look of the wireframe overlay changes
a little with on distant wires.